homefully this works better than the last one

--- a/homePage.html
+++ b/homePage.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="homePage.css">
     <script src="homePage.js"></script>
     <script src="jquery-1.11.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
           $("button").click(function(){
@@ -25,7 +26,9 @@
 </script>
   </header>
   <body>
+    <br>
     <p class="title">Welcome to Jared Mackie's Home Page</p>
+    <br>
       <button>Click to load images</button>
       
         <table>
@@ -37,7 +40,7 @@
               <img src="jaredAndErin.JPG" alt="Picture of my wife and I at Rainbow Falls" class="jaredAndErin" id="image1" name="image1"> 
             </th>
             <th>
-              <img src="jaredAndErin2.JPG" alt="Picture of my wife and I " class="jaredAndErin" id="image2" name="image2"> 
+              <img src="jaredAndErin2.JPG" alt="Picture of my wife and I " class="jaredAndErin" id="image2" name="image2" width="700px" height="600px"> 
             </th>
             <th>
               
@@ -59,7 +62,7 @@
             </th>
           </tr>
           <tr>
-            <td><p class="tableTitles1">About: Hemet California is near riverside which is about an hour away from disneyland. I have been married for almost two years and love being married to my wife. I served my mission in nicaragua and have been home for three years now. </p></td>
+            <td><p class="tableTitles1"><span>About: Hemet California is near riverside which is about an hour away from disneyland. I have been married for almost two years and love being married to my wife. I served my mission in nicaragua and have been home for three years now. </span></p></td>
             <td><p class="tableTitles2">I played Soccer, volleyball, and waterpolo all through high school and soccer since I was little. I love playing sports especially these three sports. I enjoy playing all types of games so all boardgames, all outdoor games like bocceball, ladderball and pickleball. I enjoy hiking and being outside,being very active makes me happy.</p></td>
             <td><p class="tableTitles3">I am second semester junior here at byui and have two more semesters left after this one. Before coming to BYUI I went to a community college for a year and half.I started programing when I took a intro to programming course at a community college near my hometown, since then I have been doing it ever since and became a computer science major</p></td>
           </tr>
