this one better work

--- a/homePage.html
+++ b/homePage.html
@@ -7,10 +7,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
-          $("button").click(function(){
+          //$("button").click(function(){
             $("#image1").fadeIn("slow");
             $("#image2").fadeIn("slow");
-    });
+    //});
           $("p").on({
         mouseenter: function(){
             $(this).css("background-color", "lightgray");
@@ -29,7 +29,6 @@
     <br>
     <p class="title">Welcome to Jared Mackie's Home Page</p>
     <br>
-      <button>Click to load images</button>
       
         <table>
           <col width="1000">
@@ -52,20 +51,45 @@
           <col width="600">
           <tr>
             <th>
-              <p class="tableTitles1">Intro</p>
+              <p class="tableTitles1">Intro</p><br>
             </th>
             <th>
-              <p class="tableTitles2">Hobbies</p>
+              <p class="tableTitles2">Hobbies</p><br>
             </th>
             <th>
-              <p class="tableTitles3">Education</p>
+              <p class="tableTitles3">Education</p><br>
             </th>
           </tr>
           <tr>
-            <td><p class="tableTitles1"><span>About: Hemet California is near riverside which is about an hour away from disneyland. I have been married for almost two years and love being married to my wife. I served my mission in nicaragua and have been home for three years now. </span></p></td>
-            <td><p class="tableTitles2">I played Soccer, volleyball, and waterpolo all through high school and soccer since I was little. I love playing sports especially these three sports. I enjoy playing all types of games so all boardgames, all outdoor games like bocceball, ladderball and pickleball. I enjoy hiking and being outside,being very active makes me happy.</p></td>
-            <td><p class="tableTitles3">I am second semester junior here at byui and have two more semesters left after this one. Before coming to BYUI I went to a community college for a year and half.I started programing when I took a intro to programming course at a community college near my hometown, since then I have been doing it ever since and became a computer science major</p></td>
+            <td>
+              <p>
+                <span>About: Hemet California is near riverside which is<br>
+             about an hour away from disneyland. I have been married <br>
+             for almost two years and love being married to my wife. <br>
+             I served my mission in nicaragua and have been home for <br>
+             three years now. I will be doing an internship in the <br>
+             april at family search which I am very excited to start. 
+                </span>
+              </p>
+            </td>
+            <td><p class="tableTitles2">I played Soccer, volleyball, and waterpolo all through <br>
+              high school and soccer since I was little. I love playing<br>
+               sports especially these three sports. I enjoy playing all<br>
+                types of games so all boardgames, all outdoor games like <br>
+                bocceball, ladderball and pickleball. I enjoy hiking and <br>
+                being outside,being very active makes me happy.</p></td>
+            <td><p class="tableTitles3">I am second semester junior here at byui and have two <br>
+              more semesters left after this one. Before coming to BYUI <br>
+               I went to a community college for a year and half.I started<br>
+                programing when I took a intro to programming course at a <br>
+                community college near my hometown, since then I have been <br>
+                doing it ever since and became a computer science major</p></td>
           </tr>
       </table>
+      <br>
+      <a href= "index.html" class="button"> 
+            <span>Go back to assignment page</span> 
+      </a> 
+      <br><br>
   <body>
 <html>
