homefully the final changes

--- a/homePage.html
+++ b/homePage.html
@@ -30,7 +30,7 @@
     <p class="title">Welcome to Jared Mackie's Home Page</p>
     <br>
     <hr>
-      <button><span>Push to see Pictures</span></button>
+      <button><p class="button">Push to see Pictures</button><br>
         <table>
           <col width="700">
           <col width="700">
@@ -45,7 +45,7 @@
             <th>
               
         </table>
-      
+      <br>
       <table>
           <col width="500">
           <col width="500">
