a couple more changes

--- a/homePage.html
+++ b/homePage.html
@@ -26,9 +26,11 @@
 </script>
   </header>
   <body>
+    <div>
     <br>
     <p class="title">Welcome to Jared Mackie's Home Page</p>
     <br>
+  </div>
     <hr>
       <button><p class="button">Push to see Pictures</button><br>
         <table>
@@ -43,7 +45,7 @@
               <img src="jaredAndErin2.JPG" alt="Picture of my wife and I " class="jaredAndErin" id="image2" name="image2" > 
             </th>
             <th>
-              
+              <hr>
         </table>
       <br>
       <table>
@@ -84,6 +86,7 @@
                 community college near my hometown, since then I have been 
                 doing it ever since and became a computer science major</p></td>
           </tr>
+          <hr>
       </table>
       <br>
       <a href= "index.html" class="button"> 
