--- a/homePage.html
+++ b/homePage.html
@@ -25,7 +25,7 @@
 });
 </script>
   </header>
-  <body>
+  <body><br><br>
     <div>
     <br>
     <p class="title">Welcome to Jared Mackie's Home Page</p>
