second commit to see the results

--- a/survey.html
+++ b/survey.html
@@ -7,12 +7,12 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     	</header>
   	<body><br>
-  		<p class="title">Welcome to Jared Mackie's Home Page</p>
+  		<p class="title">Game Survey</p>
     	<br>
   		<br>
   			<form action="survey.php" method="post">
   				<fieldset><legend>Please Answer The Following Questions And Vote For Your Favorite Games</legend>
-  				What Types of Games Do You Like Best?
+  				<br>What Types of Games Do You Like Best?<br>
   				<input type="radio" name="game" id="game" checked="checked" value="" class="css-labels">Party games
   				<input type="radio" name="game" id="game" value="">Card Games
   				<input type="radio" name="game" id="game" value="">Strategy games
@@ -20,14 +20,14 @@
   				<input type="radio" name="game" id="game" value="">Dice games
   				<input type="radio" name="game" id="game" value="">other
   				<br><br>
-  				Favorite Party Games?
+  				Favorite Party Games?<br>
   				<input type="radio" name="party" id="party" checked="checked" value="">Apples to Apples
   				<input type="radio" name="party" id="party" value="">Coup
   				<input type="radio" name="party" id="party" value="">Reverse Charades
   				<input type="radio" name="party" id="party" value="">Catch Phase
   				<input type="radio" name="party" id="party" value="">Mafia
   				<br><br>
-  				<p>Favorite Card Game?</p>
+  				<p>Favorite Card Game?</p><br>
                 <input type="radio" name="card" id="card" checked="checked" value="Uno">Uno
                 <input type="radio" name="card" id="card" value="War">War
                 <input type="radio" name="card" id="card" value="Phase 10">Phase 10
@@ -35,27 +35,29 @@
                 <input type="radio" name="card" id="card" value="">Love Letter
                 
                 <br><br>
-                Favorite Strategy Games?
+                Favorite Strategy Games?<br>
                 <input type="radio" name="strategy" id="strategy" checked="checked" value="">Chess
                 <input type="radio" name="strategy" id="strategy" value="">Risk
                 <input type="radio" name="strategy" id="strategy" value="">Ticket to Ride
                 <input type="radio" name="strategy" id="strategy" value="">Settlers of Catan
                 <input type="radio" name="strategy" id="strategy" value="">Stratego
                 <br><br>
-                Favorite Cooperative Games?
+                Favorite Cooperative Games?<br>
                 <input type="radio" name="coop" id="coop" checked="checked" value="">Pandemeic
                 <input type="radio" name="coop" id="coop" value="">Shadows Over Camolot
                 <input type="radio" name="coop" id="coop" value="">Forbidden Desert
                 <input type="radio" name="coop" id="coop" value="">Hanabi
                 <input type="radio" name="coop" id="coop" value="">Ghost Stories
                 <br><br>
-                Favorite Dice Games?
+                Favorite Dice Games?<br>
                 <input type="radio" name="dice" id="dice" checked="checked" value="">Yatzee
                 <input type="radio" name="dice" id="dice" value="">Liars Dice
                 <input type="radio" name="dice" id="dice" value="">Heroscape
                 <input type="radio" name="dice" id="dice" value="">Bunco
-                <input type="radio" name="dice" id="dice" value="">Bang!
-                <input type="submit" name="submit" value="Submit Game Votes"/>
+                <input type="radio" name="dice" id="dice" value="">Bang!<br>
+
+                <input type="submit" name="submit" value="Submit Game Votes"/><br><br>
+
             	</fieldset>
                 <br><br>
                 <a href= "survey.php" class="button"> 
