--- a/survey.html
+++ b/survey.html
@@ -14,47 +14,47 @@
   				<fieldset><legend>Please Answer The Following Questions And Vote For Your Favorite Games</legend>
   				<br>What Types of Games Do You Like Best?<br>
   				<input type="radio" name="game" id="game" checked="checked" value="" class="css-labels">Party games
-  				<input type="radio" name="game" id="game" value="">Card Games
-  				<input type="radio" name="game" id="game" value="">Strategy games
-  				<input type="radio" name="game" id="game" value="">Cooperative games
-  				<input type="radio" name="game" id="game" value="">Dice games
-  				<input type="radio" name="game" id="game" value="">other
+  				<input type="radio" name="game" id="game" value="Card Games">Card Games
+  				<input type="radio" name="game" id="game" value="Strategy games">Strategy games
+  				<input type="radio" name="game" id="game" value="Cooperative games">Cooperative games
+  				<input type="radio" name="game" id="game" value="Dice games">Dice games
+  				<input type="radio" name="game" id="game" value="other">other
   				<br><br>
   				Favorite Party Games?<br>
-  				<input type="radio" name="party" id="party" checked="checked" value="">Apples to Apples
-  				<input type="radio" name="party" id="party" value="">Coup
-  				<input type="radio" name="party" id="party" value="">Reverse Charades
-  				<input type="radio" name="party" id="party" value="">Catch Phase
-  				<input type="radio" name="party" id="party" value="">Mafia
+  				<input type="radio" name="party" id="party" checked="checked" value="Apples to Apples">Apples to Apples
+  				<input type="radio" name="party" id="party" value="Coup">Coup
+  				<input type="radio" name="party" id="party" value="Reverse Charades">Reverse Charades
+  				<input type="radio" name="party" id="party" value="Catch Phase">Catch Phase
+  				<input type="radio" name="party" id="party" value="Mafia">Mafia
   				<br><br>
   				<p>Favorite Card Game?</p><br>
                 <input type="radio" name="card" id="card" checked="checked" value="Uno">Uno
                 <input type="radio" name="card" id="card" value="War">War
                 <input type="radio" name="card" id="card" value="Phase 10">Phase 10
-                <input type="radio" name="card" id="card" value="">Dominion
-                <input type="radio" name="card" id="card" value="">Love Letter
+                <input type="radio" name="card" id="card" value="Dominion">Dominion
+                <input type="radio" name="card" id="card" value="Love Letter">Love Letter
                 
                 <br><br>
                 Favorite Strategy Games?<br>
-                <input type="radio" name="strategy" id="strategy" checked="checked" value="">Chess
-                <input type="radio" name="strategy" id="strategy" value="">Risk
-                <input type="radio" name="strategy" id="strategy" value="">Ticket to Ride
-                <input type="radio" name="strategy" id="strategy" value="">Settlers of Catan
-                <input type="radio" name="strategy" id="strategy" value="">Stratego
+                <input type="radio" name="strategy" id="strategy" checked="checked" value="Chess">Chess
+                <input type="radio" name="strategy" id="strategy" value="Risk">Risk
+                <input type="radio" name="strategy" id="strategy" value="Ticket to Ride">Ticket to Ride
+                <input type="radio" name="strategy" id="strategy" value="Settlers of Catan">Settlers of Catan
+                <input type="radio" name="strategy" id="strategy" value="Stratego">Stratego
                 <br><br>
                 Favorite Cooperative Games?<br>
-                <input type="radio" name="coop" id="coop" checked="checked" value="">Pandemeic
-                <input type="radio" name="coop" id="coop" value="">Shadows Over Camolot
-                <input type="radio" name="coop" id="coop" value="">Forbidden Desert
-                <input type="radio" name="coop" id="coop" value="">Hanabi
-                <input type="radio" name="coop" id="coop" value="">Ghost Stories
+                <input type="radio" name="coop" id="coop" checked="checked" value="Pandemeic">Pandemeic
+                <input type="radio" name="coop" id="coop" value="Shadows Over Camolot">Shadows Over Camolot
+                <input type="radio" name="coop" id="coop" value="Forbidden Desert">Forbidden Desert
+                <input type="radio" name="coop" id="coop" value="Hanabi">Hanabi
+                <input type="radio" name="coop" id="coop" value="Ghost Stories">Ghost Stories
                 <br><br>
                 Favorite Dice Games?<br>
-                <input type="radio" name="dice" id="dice" checked="checked" value="">Yatzee
-                <input type="radio" name="dice" id="dice" value="">Liars Dice
-                <input type="radio" name="dice" id="dice" value="">Heroscape
-                <input type="radio" name="dice" id="dice" value="">Bunco
-                <input type="radio" name="dice" id="dice" value="">Bang!<br>
+                <input type="radio" name="dice" id="dice" checked="checked" value="Yatzee">Yatzee
+                <input type="radio" name="dice" id="dice" value="Liars Dice">Liars Dice
+                <input type="radio" name="dice" id="dice" value="Heroscape">Heroscape
+                <input type="radio" name="dice" id="dice" value="Bunco">Bunco
+                <input type="radio" name="dice" id="dice" value="Bang!">Bang!<br>
 
                 <input type="submit" name="submit" value="Submit Game Votes"/><br><br>
 
