second attempt to use file to display whole string

--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,6 @@
   	<body><br>
   		<p class="title">Game Survey</p>
     	<br>
-  		<br>
   			<form action="survey.php" method="post">
   				<fieldset><legend>Please Answer The Following Questions And Vote For Your Favorite Games</legend>
   				<br>What Types of Games Do You Like Best?<br>
@@ -33,8 +32,7 @@
                 <input type="radio" name="card" id="card" value="Phase 10">Phase 10
                 <input type="radio" name="card" id="card" value="Dominion">Dominion
                 <input type="radio" name="card" id="card" value="Love Letter">Love Letter
-                
-                <br><br>
+                <br>
                 Favorite Strategy Games?<br>
                 <input type="radio" name="strategy" id="strategy" checked="checked" value="Chess">Chess
                 <input type="radio" name="strategy" id="strategy" value="Risk">Risk
@@ -54,12 +52,12 @@
                 <input type="radio" name="dice" id="dice" value="Liars Dice">Liars Dice
                 <input type="radio" name="dice" id="dice" value="Heroscape">Heroscape
                 <input type="radio" name="dice" id="dice" value="Bunco">Bunco
-                <input type="radio" name="dice" id="dice" value="Bang!">Bang!<br>
+                <input type="radio" name="dice" id="dice" value="Bang!">Bang!<br><br>
 
-                <input type="submit" name="submit" value="Submit Game Votes"/><br><br>
+                <input style="text-align:center" type="submit" name="submit" value="Submit Game Votes"/><br>
 
             	</fieldset>
-                <br><br>
+                <br>
                 <a href= "survey.php" class="button"> 
             		<span>See Previous Game Votes </span> 
       			</a> 
