trying to read certain parts of survey.txt

--- a/survey.html
+++ b/survey.html
@@ -12,7 +12,7 @@
   			<form action="survey.php" method="post">
   				<fieldset><legend>Please Answer The Following Questions And Vote For Your Favorite Games</legend>
   				<br>What Types of Games Do You Like Best?<br>
-  				<input type="radio" name="game" id="game" checked="checked" value="" class="css-labels">Party games
+  				<input type="radio" name="game" id="game" checked="checked" value="Party games" class="css-labels">Party games
   				<input type="radio" name="game" id="game" value="Card Games">Card Games
   				<input type="radio" name="game" id="game" value="Strategy games">Strategy games
   				<input type="radio" name="game" id="game" value="Cooperative games">Cooperative games
