tryiy to display results of array from json

--- a/survey.html
+++ b/survey.html
@@ -66,6 +66,10 @@
             <span>Go back to assignment page</span> 
       	</a> 
       	<br><br>
+<?php
+  session_start(); 
+  $_SESSION['game'] = 'awesome';
+?>
 
     <body>
 <html>
