making major changes to css and looks loading to git hub

--- a/survey.html
+++ b/survey.html
@@ -20,41 +20,41 @@
   				<input type="radio" name="game" id="game" value="other"><span>Other</span>
   				<br><br>
   				<p class="questions">Favorite Party Games?</p><br>
-  				<input type="radio" name="party" id="party" checked="checked" value="Apples to Apples">Apples to Apples
-  				<input type="radio" name="party" id="party" value="Coup">Coup
-  				<input type="radio" name="party" id="party" value="Reverse Charades">Reverse Charades
-  				<input type="radio" name="party" id="party" value="Catch Phase">Catch Phase
-  				<input type="radio" name="party" id="party" value="Mafia">Mafia
+  				<input type="radio" name="party" id="party" checked="checked" value="Apples to Apples"><span>Apples to Apples</span>
+  				<input type="radio" name="party" id="party" value="Coup"><span>Coup</span>
+  				<input type="radio" name="party" id="party" value="Reverse Charades"><span>Reverse Charades</span>
+  				<input type="radio" name="party" id="party" value="Catch Phase"><span>Catch Phase</span>
+  				<input type="radio" name="party" id="party" value="Mafia"><span>Mafia</span>
   				<br><br>
   				<p class="questions">Favorite Card Game?</p><br>
-                <input type="radio" name="card" id="card" checked="checked" value="Uno">Uno
-                <input type="radio" name="card" id="card" value="War">War
-                <input type="radio" name="card" id="card" value="Phase 10">Phase 10
-                <input type="radio" name="card" id="card" value="Dominion">Dominion
-                <input type="radio" name="card" id="card" value="Love Letter">Love Letter
+                <input type="radio" name="card" id="card" checked="checked" value="Uno"><span>Uno</span>
+                <input type="radio" name="card" id="card" value="War"><span>War</span>
+                <input type="radio" name="card" id="card" value="Phase 10"><span>Phase 10</span>
+                <input type="radio" name="card" id="card" value="Dominion"><span>Dominion</span>
+                <input type="radio" name="card" id="card" value="Love Letter"><span>Love Letter</span>
                 <br>
                 <p class="questions">Favorite Strategy Games?</p><br>
-                <input type="radio" name="strategy" id="strategy" checked="checked" value="Chess">Chess
-                <input type="radio" name="strategy" id="strategy" value="Risk">Risk
-                <input type="radio" name="strategy" id="strategy" value="Ticket to Ride">Ticket to Ride
-                <input type="radio" name="strategy" id="strategy" value="Settlers of Catan">Settlers of Catan
-                <input type="radio" name="strategy" id="strategy" value="Stratego">Stratego
+                <input type="radio" name="strategy" id="strategy" checked="checked" value="Chess"><span>Chess</span>
+                <input type="radio" name="strategy" id="strategy" value="Risk"><span>Risk</span>
+                <input type="radio" name="strategy" id="strategy" value="Ticket to Ride"><span>Ticket to Ride</span>
+                <input type="radio" name="strategy" id="strategy" value="Settlers of Catan"><span>Settlers of Catan</span>
+                <input type="radio" name="strategy" id="strategy" value="Stratego"><span>Stratego</span>
                 <br><br>
                 <p class="questions">Favorite Cooperative Games?</p><br>
-                <input type="radio" name="coop" id="coop" checked="checked" value="Pandemeic">Pandemeic
-                <input type="radio" name="coop" id="coop" value="Shadows Over Camolot">Shadows Over Camolot
-                <input type="radio" name="coop" id="coop" value="Forbidden Desert">Forbidden Desert
-                <input type="radio" name="coop" id="coop" value="Hanabi">Hanabi
-                <input type="radio" name="coop" id="coop" value="Ghost Stories">Ghost Stories
+                <input type="radio" name="coop" id="coop" checked="checked" value="Pandemeic"><span>Pandemeic</span>
+                <input type="radio" name="coop" id="coop" value="Shadows Over Camolot"><span>Shadows Over Camolot</span>
+                <input type="radio" name="coop" id="coop" value="Forbidden Desert"><span>Forbidden Desert</span>
+                <input type="radio" name="coop" id="coop" value="Hanabi"><span>Hanabi</span>
+                <input type="radio" name="coop" id="coop" value="Ghost Stories"><span>Ghost Stories</span>
                 <br><br>
                 <p class="questions">Favorite Dice Games?</p><br>
-                <input type="radio" name="dice" id="dice" checked="checked" value="Yatzee">Yatzee
-                <input type="radio" name="dice" id="dice" value="Liars Dice">Liars Dice
-                <input type="radio" name="dice" id="dice" value="Heroscape">Heroscape
-                <input type="radio" name="dice" id="dice" value="Bunco">Bunco
-                <input type="radio" name="dice" id="dice" value="Bang!">Bang!<br><br>
+                <input type="radio" name="dice" id="dice" checked="checked" value="Yatzee"><span>Yatzee</span>
+                <input type="radio" name="dice" id="dice" value="Liars Dice"><span>Liars Dice</span>
+                <input type="radio" name="dice" id="dice" value="Heroscape"><span>Heroscape</span>
+                <input type="radio" name="dice" id="dice" value="Bunco"><span>Bunco</span>
+                <input type="radio" name="dice" id="dice" value="Bang!"><span>Bang!</span><br><br>
 
-                <input class="button" type="submit" name="submit" value="Submit Game Votes"/><br>
+                <input class="submit" type="submit" name="submit" value="Submit Game Votes"/><br>
 
             	</fieldset>
                 <br>
