more changes to the css

--- a/survey.html
+++ b/survey.html
@@ -12,7 +12,7 @@
   			<form action="survey.php" method="post">
   				<fieldset><legend><p class="leg">Please Answer The Following Questions And Vote For Your Favorite Games</p></legend>
   				<br><p class="questions">What Types of Games Do You Like Best?</p><br>
-  				<input type="radio" name="game" id="game" checked="checked" value="Party games" class="css-checkbox"><span>Party games</span>
+  				<input type="radio" name="game" id="game" checked="checked" value="Party games"><span>Party games</span>
   				<input type="radio" name="game" id="game" value="Card Games" ><span>Card Games</span>
   				<input type="radio" name="game" id="game" value="Strategy games"><span>Strategy games</span>
   				<input type="radio" name="game" id="game" value="Cooperative games"><span>Cooperative games</span>
