more changes to css and php file

--- a/survey.html
+++ b/survey.html
@@ -59,10 +59,10 @@
             	</fieldset>
                 <br>
                 <a href= "survey.php" class="button"> 
-            		<p class="a">See Previous Game Votes </p> 
+            		<p class="results">See Previous Game Votes </p> 
       			</a> 
             </form>
-      	<a href= "index.html" class="button"> 
+      	<br><br><a href= "index.html" class="button"> 
             <p class="a">Go back to assignment page</p> 
       	</a> 
       	<br><br>
