trying some new things

--- a/survey.html
+++ b/survey.html
@@ -58,18 +58,14 @@
 
             	</fieldset>
                 <br>
-                <a href= "survey.php" class="button"> 
+                <a href= "survey.php" > 
             		<p class="results">See Previous Game Votes </p> 
       			</a> 
             </form>
-      	<br><br><a href= "index.html" class="button"> 
+      	<br><br><a href= "index.html"> 
             <p class="a">Go back to assignment page</p> 
       	</a> 
       	<br><br>
-<?php
-  session_start(); 
-  $_SESSION['game'] = 'awesome';
-?>
 
     <body>
 <html>
