--- a/survey.html
+++ b/survey.html
@@ -62,6 +62,13 @@
             		<p class="results">See Previous Game Votes </p> 
       			</a> 
             </form>
+<?php
+	
+
+	session_start();
+	if (isset($_SESSION['submit'])) { header('Location: survey.php'); }
+
+ ?>
       	<br><br><a href= "index.html"> 
             <p class="a">Go back to assignment page</p> 
       	</a> 
