--- a/survey.html
+++ b/survey.html
@@ -64,7 +64,8 @@
             </form>
 <?php
 	
-	
+	session_start();
+	 if (isset($_POST['submit'])) {header('Location: survey.php');}
 
  ?>
       	<br><br><a href= "index.html"> 
